--- a/app/src/main/res/layout/item_mingxi_layout.xml
+++ b/app/src/main/res/layout/item_mingxi_layout.xml
@@ -7,64 +7,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:paddingBottom="@dimen/x2"
-        android:paddingTop="@dimen/x2">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="本期下注明细"
-            android:textColor="@color/text000" />
-
-        <Button
-            android:id="@+id/btn_search"
-            android:layout_width="@dimen/x35"
-            android:layout_height="@dimen/y15"
-            android:layout_marginLeft="@dimen/x5"
-            android:background="@color/bgtitle"
-            android:text="搜索"
-            android:textColor="@color/bgfff"
-            android:textSize="@dimen/x10" />
-
-        <Button
-            android:id="@+id/btn_zhongjiang"
-            android:layout_width="@dimen/x35"
-            android:layout_height="@dimen/y15"
-            android:layout_marginLeft="@dimen/x5"
-            android:background="@color/bgtitle"
-            android:text="中奖"
-            android:textColor="@color/bgfff"
-            android:textSize="@dimen/x10" />
-
-        <Button
-            android:id="@+id/btn_tuima"
-            android:layout_width="@dimen/x35"
-            android:layout_height="@dimen/y15"
-            android:layout_marginLeft="@dimen/x5"
-            android:background="@color/bgtitle"
-            android:text="退码"
-            android:textColor="@color/bgfff"
-            android:textSize="@dimen/x10" />
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/x1"
-        android:background="@color/text999"></View>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:weightSum="5">
 
         <TextView
+            android:id="@+id/tv_num"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="号码"
+            android:text="1234"
             android:textColor="@color/text000" />
 
         <View
@@ -73,11 +24,12 @@
             android:background="@color/text999"></View>
 
         <TextView
+            android:id="@+id/tv_money"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="金额"
+            android:text="0.1"
             android:textColor="@color/text000" />
 
         <View
@@ -86,11 +38,12 @@
             android:background="@color/text999"></View>
 
         <TextView
+            android:id="@+id/tv_peilv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="赔率"
+            android:text="9700"
             android:textColor="@color/text000" />
 
         <View
@@ -99,11 +52,12 @@
             android:background="@color/text999"></View>
 
         <TextView
+            android:id="@+id/tv_zhongjiang"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="中奖"
+            android:text="--"
             android:textColor="@color/text000" />
 
         <View
@@ -112,11 +66,12 @@
             android:background="@color/text999"></View>
 
         <TextView
+            android:id="@+id/tv_type"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:gravity="center"
-            android:text="状态"
+            android:text="成功"
             android:textColor="@color/text000" />
 
         <View
@@ -125,7 +80,7 @@
             android:background="@color/text999"></View>
 
         <CheckBox
-            android:id="@+id/cb_checkall"
+            android:id="@+id/cb_check"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
@@ -137,20 +92,5 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/x1"
         android:background="@color/text999"></View>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="#fff">
-
-        <com.sakuraprint2.View.WenguoyiRecycleView
-            android:id="@+id/rv_mingxi_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></com.sakuraprint2.View.WenguoyiRecycleView>
-
-        <include layout="@layout/layout_collection_empty"></include>
-
-    </RelativeLayout>
 
 </LinearLayout>
