--- a/app/src/main/res/layout/fragment_zhangdan.xml
+++ b/app/src/main/res/layout/fragment_zhangdan.xml
@@ -78,79 +78,21 @@
         android:layout_height="@dimen/x1"
         android:background="@color/text999"></View>
 
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y20"
-        android:padding="@dimen/x3"
-        android:weightSum="5">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#fff">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="18086"
-            android:textColor="@color/textred" />
+        <com.sakuraprint2.View.WenguoyiRecycleView
+            android:id="@+id/rv_zhangdan_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></com.sakuraprint2.View.WenguoyiRecycleView>
 
-        <View
-            android:layout_width="@dimen/x1"
-            android:layout_height="match_parent"
-            android:background="@color/text999"></View>
+        <include layout="@layout/layout_collection_empty"></include>
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="1"
-            android:textColor="@color/text000" />
+    </RelativeLayout>
 
-        <View
-            android:layout_width="@dimen/x1"
-            android:layout_height="match_parent"
-            android:background="@color/text999"></View>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="0"
-            android:textColor="@color/text000" />
-
-        <View
-            android:layout_width="@dimen/x1"
-            android:layout_height="match_parent"
-            android:background="@color/text999"></View>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="--"
-            android:textColor="@color/text000" />
-
-        <View
-            android:layout_width="@dimen/x1"
-            android:layout_height="match_parent"
-            android:background="@color/text999"></View>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="--"
-            android:textColor="@color/text000" />
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/x1"
-        android:background="@color/text999"></View>
 
 
     <LinearLayout
@@ -164,7 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="合计0"
+            android:text="合计"
             android:textColor="@color/text000" />
 
         <View
