--- a/app/src/main/res/layout/fragment_kuaida.xml
+++ b/app/src/main/res/layout/fragment_kuaida.xml
@@ -394,7 +394,8 @@
                         android:id="@+id/et_haoma"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:focusable="false" />
+                        android:focusable="false"
+                        android:maxLength="4" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -414,7 +415,9 @@
                     <EditText
                         android:id="@+id/et_money"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:focusable="false"
+                        android:maxLength="4" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -498,36 +501,42 @@
                 android:weightSum="6">
 
                 <Button
+                    android:id="@+id/btn5"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="5" />
 
                 <Button
+                    android:id="@+id/btn4"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="4" />
 
                 <Button
+                    android:id="@+id/btn3"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="3" />
 
                 <Button
+                    android:id="@+id/btn2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="2" />
 
                 <Button
+                    android:id="@+id/btn1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="1" />
 
                 <Button
+                    android:id="@+id/btnx"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -541,36 +550,42 @@
                 android:weightSum="6">
 
                 <Button
+                    android:id="@+id/btn6"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="6" />
 
                 <Button
+                    android:id="@+id/btn7"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="7" />
 
                 <Button
+                    android:id="@+id/btn8"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="8" />
 
                 <Button
+                    android:id="@+id/btn9"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="9" />
 
                 <Button
+                    android:id="@+id/btn0"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="0" />
 
                 <Button
+                    android:id="@+id/btn_submit"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
